Fixed the spacing of the text on the image side of the login page, so that it is now at the top of the page.

--- a/style.css
+++ b/style.css
@@ -175,3 +175,18 @@ button {
     height: 100%;
     background: rgba(0, 0, 0, 0.3);
 }
+
+.imgText {
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    width: 100%;
+    padding: 0 20px;
+    text-align: center;
+    color: #fff;
+    -webkit-transition: -webkit-transform 1.2s ease-in-out;
+    transition: -webkit-transform 1.2s ease-in-out;
+    transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
+
+}
